<resources>
    <string name="app_name">Buana Absensi</string>
    <string name="lupa_password_hubungi_administrator">Lupa Password ? Hubungi Administrator</string>
    <string name="buana_logo">Buana Logo</string>
    <string name="buana_nabsensi">Buana\nAbsensi</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="buana_absensi">Buana Absensi</string>
    <string name="register">Register</string>
    <string name="atau_daftar_disini">Atau daftar Disini</string>
    <string name="nama">Nama</string>
    <string name="nomor_tidak_terdaftar">Nomor tidak terdaftar</string>
    <string name="nama_depan">Nama Depan</string>
    <string name="nama_belakang">Nama Belakang</string>
    <string name="konfirmasi_password">Konfirmasi Password</string>
    <string name="buat_akun">Buat Akun</string>
    <string name="daftar_akun">Daftar Akun</string>
    <string name="harus_diisi">Harus Diisi</string>
    <string name="harap_isi_semua_dengan_benar">Harap isi semua data dengan denar!</string>
    <string name="nip_belum_terdaftar">NIP Belum Terdaftar Sebagai Pegawai</string>
    <string name="berhasil_daftar">Berhasil Daftar</string>
    <string name="password_minimal">Password minimal 6 karakter</string>
    <string name="password_tidak_sama">Password Tidak Sama</string>
    <string name="unknown_error">Unknown Error</string>
    <string name="kosong">Kosong</string>
    <string name="halo">Halo,</string>
    <string name="admin">Admin</string>
    <string name="keluar_akun">Keluar Akun</string>
    <string name="profil">Profil</string>
    <string name="riwayat">Riwayat</string>
    <string name="presensi">Presensi</string>
    <string name="logout">Logout</string>
    <string name="beranda">Beranda</string>
    <string name="nomor_induk_pegawai">Nomor Induk Pegawai</string>
    <string name="tahun_bergabung">Tahun Bergabung</string>
    <string name="status">Status</string>
    <string name="nip">NIP</string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyDSdebLYh-jboMJFV9PdpMOQ--ZfT9s6Hc</string>
    <string name="lakukan_pesensi">Lakukan Pesensi</string>
    <string name="tanggal2">Tanggal:</string>
    <string name="tanggal">Tanggal</string>
    <string name="presensi_hari_ini">Presensi Hari Ini</string>
    <string name="anda_tidak_dapat_presensi_bila">Anda tidak dapat melakukan presensi bila lokasi tidak berada di sekitar kantor</string>
    <string name="belum_prsnsi">Belum Melakukan Presensi</string>
    <string name="tidak_prsesnsi">Tidak Melakukan Presensi</string>
    <string name="belum_waktu_kerja">Belum Waktu Kerja</string>
    <string name="ALPHA">ALPHA</string>
    <string name="buka_presensi">Buka Presensi</string>
    <string name="keluar">Keluar</string>
    <string name="buka_presensi_hari_ini">Buka Presensi Hari Ini</string>
    <string name="presensi_aktif">Presensi Aktif</string>
    <string name="buka_prsnsi_hariini">Buka Presensi Hari Ini</string>
    <string name="tutup_prsnsi_hariini">Tutup Presensi Hari Ini</string>
    <string name="tidak_ada_presensi_hari_ini">Tidak Ada Presensi Hari Ini</string>
    <string name="lakukan_presensi">Lakukan Presensi</string>
    <string name="presensi_belum_dibuka">Presensi Belum Dibuka</string>
    <string name="status2">Status:</string>
    <string name="sudah_presensi">Sudah Melakukan Presensi</string>
    <string name="aktif">Aktif</string>
    <string name="tidak_aktif">Tidak Aktif</string>
    <string name="berhasil_presensi">Berhasil Melakukan Presensi</string>
    <string name="tambah_nomor_induk_pegawai">Tambah Nomor Induk Pegawai</string>
    <string name="OK">OK</string>
    <string name="batal">Batal</string>
    <string name="presensi_telah_ditutup">Presensi Telah Ditutup</string>
</resources>