<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_nav_graph"
    app:startDestination="@id/nav_beranda">

    <fragment
        android:id="@+id/nav_beranda"
        android:name="com.papb.buanaabsensi.ui.beranda.BerandaFragment"
        android:label="@string/beranda">
        <action
            android:id="@+id/action_nav_beranda_to_nav_presensi"
            app:destination="@id/nav_presensi"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
        <action
            android:id="@+id/action_nav_beranda_to_nav_profil"
            app:destination="@id/nav_profil"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
        <action
            android:id="@+id/action_nav_beranda_to_nav_riwayat"
            app:destination="@id/nav_riwayat"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
    </fragment>
    <fragment
        android:id="@+id/nav_presensi"
        android:name="com.papb.buanaabsensi.ui.presensi.PresensiFragment"
        android:label="@string/presensi" />
    <fragment
        android:id="@+id/nav_profil"
        android:name="com.papb.buanaabsensi.ui.profil.ProfilFragment"
        android:label="@string/profil" >
        <argument
            android:name="pegawai"
            app:argType="com.papb.buanaabsensi.data.model.Pegawai"
            app:nullable="true" />
    </fragment>
    <fragment
        android:id="@+id/nav_riwayat"
        android:name="com.papb.buanaabsensi.ui.riwayat.RiwayatFragment"
        android:label="@string/riwayat" />

</navigation>